--- a/game.css
+++ b/game.css
@@ -19,6 +19,11 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
+h1 {
+    font-size: 5rem;
+    color: white;
+}
+
 #game-board {
     background-color: var(--game-background-color);
     width: 100vw;
@@ -34,6 +39,10 @@ body {
     width: 5rem;
     height: 5rem;
     font-size: 5rem;
+    position: absolute;
+    top: -5.5rem;
+
+    animation: dropSprites 10s linear infinite;
 }
 
 .sprite-universals:hover {
@@ -47,9 +56,22 @@ body {
     padding: 1rem;
     text-align: center;
     width: 50vw;
+    margin-bottom: 1rem;
 }
 
 .menu:hover {
     cursor: pointer;
     background-color: var(--game-background-hover);
 }
+
+/*  */
+
+@keyframes dropSprites {
+    from {
+      transform: translateY(0vh);
+    }
+  
+    to {
+      transform: translateY(100vh);
+    }
+  }
