--- a/game.css
+++ b/game.css
@@ -8,6 +8,11 @@
     --menu-border-color: rgb(212, 6, 6);
 }
 
+@font-face {
+    font-family: "press-start-2p";
+    src: url(Press_Start_2P/PressStart2P-Regular.ttf);
+}
+
 * { margin: 0; padding: 0; }
 
 html {
@@ -16,12 +21,14 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: "Roboto", sans-serif;
+    font-family: "press-start-2p", sans-serif;
 }
 
 h1 {
     font-size: 5rem;
-    color: white;
+    color: var(--coin-color);
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 #game-board {
@@ -56,12 +63,18 @@ h1 {
     padding: 1rem;
     text-align: center;
     width: 50vw;
+    margin: 0 auto;
     margin-bottom: 1rem;
 }
 
 .menu:hover {
     cursor: pointer;
     background-color: var(--game-background-hover);
+}
+
+.welcome {
+    color: white;
+    text-align: center;
 }
 
 /*  */
