--- a/game.css
+++ b/game.css
@@ -28,7 +28,7 @@ h1 {
     font-size: 5rem;
     color: var(--coin-color);
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
     padding-top: 10vh;
     user-select: none;
 }
@@ -37,6 +37,7 @@ h1 {
     background-color: var(--game-background-color);
     width: 100vw;
     height: 100vh;
+    background-image: url(bg.png);
 }
 
 #score {
@@ -67,7 +68,7 @@ h1 {
     text-align: center;
     width: 50vw;
     margin: 0 auto;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
 }
 
 .menu:hover {
