--- a/game.css
+++ b/game.css
@@ -50,7 +50,6 @@ h1 {
     height: 5rem;
     font-size: 5rem;
     position: absolute;
-    left: 0;
     top: -5.5rem;
     user-select: none;
 
@@ -85,6 +84,12 @@ h1 {
     animation: welcomeBlink 2s infinite;
     display: block;
     cursor: pointer;
+}
+
+.score, .life-total {
+    float: right;
+    color: white;
+    font-size: 2.2rem;
 }
 
 /*  */
